--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 excerpt_separator: ""
 url: http://ywang-purdue.github.io/post_index.html
-title: My Posts
+title: Hello World?!
 email: ywang.chris@gmail.com
 author: Yu Wang
 description: Hello World?!
