--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 excerpt_separator: ""
-url: http://ywang-purdue.github.io/post_index.html
-title: Hello World?!
+url: http://ywang-purdue.github.io
+title: Hello
 email: ywang.chris@gmail.com
 author: Yu Wang
-description: Hello World?!
+description: Hello
 paginate: 30
 google_analytics: 
