--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 excerpt_separator: ""
-url: http://ywang-purdue.github.io
+url: http://ywang-purdue.github.io/internal
 title: Hello
 email: ywang.chris@gmail.com
 author: Yu Wang
