--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 excerpt_separator: ""
-url: http://ywang-purdue.github.io/internal
-title: Hello
+url: http://ywang-purdue.github.io
+title: Deeper Vision
 email: ywang.chris@gmail.com
 author: Yu Wang
-description: Hello
-paginate: 30
+description: Deeper Vision
+paginate: 5
 google_analytics: 
