--- a/_config.yml
+++ b/_config.yml
@@ -78,9 +78,9 @@ analytics:
 # Site Author
 author:
   name             : "Yu Wang"
-  avatar           : "bio-photo.jpg"
+  avatar           : "me.png"
   bio              : "I am an amazing person."
-  location         : "Somewhere"
+  location         : "Purdue University"
   email            :
   uri              :
   bitbucket        :
