--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ main:
     url: /
   - title: "Courses"
     url: /courses
+  - title: "CV"
+    url: https://redpill2.ecn.purdue.edu/~wang1317/yw_cv2016.pdf
