--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Yu Wang"
   avatar           : "me.png"
-  bio              : "Student of Life"
+  bio              : "PhD Candidate, Deep learner, Puzzle/Math lover"
   location         : "Purdue University"
   email            :
   uri              :
