--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,4 +9,4 @@ main:
   - title: "Courses"
     url: /courses
   - title: "CV"
-    url: https://redpill2.ecn.purdue.edu/~wang1317/yw_cv2016.pdf
+    url: "cv2017.pdf"
