--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ analytics:
 author:
   name             : "Yu Wang"
   avatar           : "me.png"
-  bio              : "Viperian, Nvidian, 深度学习者"
-  location         : "Purdue University"
+  bio              : "Viperian, 深度学习者"
+  location         : "Santa Clara, CA"
   email            :
   uri              :
   bitbucket        :
